--- a/index.html
+++ b/index.html
@@ -216,12 +216,12 @@
                     </div>
                 </div>
 
-                <div id="carouselExampleCaptions" class="welcomeCarousel carousel slide" data-ride="carousel">
+                <div id="carouselExampleCaptionsMain" class="welcomeCarousel carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
-                        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-                        <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+                        <li data-target="#carouselExampleCaptionsMain" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleCaptionsMain" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleCaptionsMain" data-slide-to="2"></li>
+                        <li data-target="#carouselExampleCaptionsMain" data-slide-to="3"></li>
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -237,7 +237,7 @@
                         <img src="./assets/welcomeCarouselImg1.png" class="d-block w-100" alt="...">
                         </div>
                     </div>
-                    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                    <a class="carousel-control-prev" href="#carouselExampleCaptionsMain" role="button" data-slide="prev">
                         <svg class="projectsBigArrow leftArrow" viewBox="0 0 219.151 219.151" style="enable-background:new 0 0 219.151 219.151;" xml:space="preserve" width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M94.861,156.507c2.929,2.928,7.678,2.927,10.606,0c2.93-2.93,2.93-7.678-0.001-10.608l-28.82-28.819l83.457-0.008
                                 c4.142-0.001,7.499-3.358,7.499-7.502c-0.001-4.142-3.358-7.498-7.5-7.498l-83.46,0.008l28.827-28.825
@@ -246,7 +246,7 @@
                         </svg>
                         <span class="sr-only">Previous</span>
                     </a>
-                    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                    <a class="carousel-control-next" href="#carouselExampleCaptionsMain" role="button" data-slide="next">
                         <svg class="projectsBigArrow rightArrow" viewBox="0 0 219.151 219.151" style="enable-background:new 0 0 219.151 219.151;" xml:space="preserve" width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M94.861,156.507c2.929,2.928,7.678,2.927,10.606,0c2.93-2.93,2.93-7.678-0.001-10.608l-28.82-28.819l83.457-0.008
                                 c4.142-0.001,7.499-3.358,7.499-7.502c-0.001-4.142-3.358-7.498-7.5-7.498l-83.46,0.008l28.827-28.825
@@ -291,12 +291,12 @@
 
                 <ul class="bigProjectsList row">
                     <li class="col-12 col-xl-10 offset-xl-1">
-                        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                        <div id="carouselExampleCaptions1" class="carousel slide" data-ride="carousel">
                             <ol class="carousel-indicators">
-                              <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                              <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                              <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-                              <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+                              <li data-target="#carouselExampleCaptions1" data-slide-to="0" class="active"></li>
+                              <li data-target="#carouselExampleCaptions1" data-slide-to="1"></li>
+                              <li data-target="#carouselExampleCaptions1" data-slide-to="2"></li>
+                              <li data-target="#carouselExampleCaptions1" data-slide-to="3"></li>
                             </ol>
                             <div class="carousel-inner">
                               <div class="carousel-item active">
@@ -312,7 +312,7 @@
                                 <img src="./assets/projectBigImg1.png" class="d-block w-100" alt="...">
                               </div>
                             </div>
-                            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                            <a class="carousel-control-prev" href="#carouselExampleCaptions1" role="button" data-slide="prev">
                                 <svg class="projectsBigArrow leftArrow" viewBox="0 0 219.151 219.151" style="enable-background:new 0 0 219.151 219.151;" xml:space="preserve" width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M94.861,156.507c2.929,2.928,7.678,2.927,10.606,0c2.93-2.93,2.93-7.678-0.001-10.608l-28.82-28.819l83.457-0.008
                                         c4.142-0.001,7.499-3.358,7.499-7.502c-0.001-4.142-3.358-7.498-7.5-7.498l-83.46,0.008l28.827-28.825
@@ -321,7 +321,7 @@
                                 </svg>
                               <span class="sr-only">Previous</span>
                             </a>
-                            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                            <a class="carousel-control-next" href="#carouselExampleCaptions1" role="button" data-slide="next">
                                 <svg class="projectsBigArrow rightArrow" viewBox="0 0 219.151 219.151" style="enable-background:new 0 0 219.151 219.151;" xml:space="preserve" width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M94.861,156.507c2.929,2.928,7.678,2.927,10.606,0c2.93-2.93,2.93-7.678-0.001-10.608l-28.82-28.819l83.457-0.008
                                         c4.142-0.001,7.499-3.358,7.499-7.502c-0.001-4.142-3.358-7.498-7.5-7.498l-83.46,0.008l28.827-28.825
@@ -354,12 +354,12 @@
                     </li>
 
                     <li class="col-12 col-xl-10 offset-xl-1">
-                        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                        <div id="carouselExampleCaptions2" class="carousel slide" data-ride="carousel">
                             <ol class="carousel-indicators">
-                              <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                              <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                              <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-                              <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+                              <li data-target="#carouselExampleCaptions2" data-slide-to="0" class="active"></li>
+                              <li data-target="#carouselExampleCaptions2" data-slide-to="1"></li>
+                              <li data-target="#carouselExampleCaptions2" data-slide-to="2"></li>
+                              <li data-target="#carouselExampleCaptions2" data-slide-to="3"></li>
                             </ol>
                             <div class="carousel-inner">
                               <div class="carousel-item active">
@@ -375,7 +375,7 @@
                                 <img src="./assets/projectBigImg1.png" class="d-block w-100" alt="...">
                               </div>
                             </div>
-                            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                            <a class="carousel-control-prev" href="#carouselExampleCaptions2" role="button" data-slide="prev">
                                 <svg class="projectsBigArrow leftArrow" viewBox="0 0 219.151 219.151" style="enable-background:new 0 0 219.151 219.151;" xml:space="preserve" width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M94.861,156.507c2.929,2.928,7.678,2.927,10.606,0c2.93-2.93,2.93-7.678-0.001-10.608l-28.82-28.819l83.457-0.008
                                         c4.142-0.001,7.499-3.358,7.499-7.502c-0.001-4.142-3.358-7.498-7.5-7.498l-83.46,0.008l28.827-28.825
@@ -384,7 +384,7 @@
                                 </svg>
                               <span class="sr-only">Previous</span>
                             </a>
-                            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                            <a class="carousel-control-next" href="#carouselExampleCaptions2" role="button" data-slide="next">
                                 <svg class="projectsBigArrow rightArrow" viewBox="0 0 219.151 219.151" style="enable-background:new 0 0 219.151 219.151;" xml:space="preserve" width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M94.861,156.507c2.929,2.928,7.678,2.927,10.606,0c2.93-2.93,2.93-7.678-0.001-10.608l-28.82-28.819l83.457-0.008
                                         c4.142-0.001,7.499-3.358,7.499-7.502c-0.001-4.142-3.358-7.498-7.5-7.498l-83.46,0.008l28.827-28.825
