--- a/index.html
+++ b/index.html
@@ -270,6 +270,8 @@
         </div>
     </section>
 
+    
+
     <section class="discount">
         <div class="container">
             <div class="row">
@@ -279,7 +281,7 @@
                     <p class="header4">Нажимая кнопку Вы даёте согласие на&nbspобработку своих персональных данных согласно №152-ФЗ о&nbspперсональных данных </p>
                 </div>
 
-                <form id="amoforms_formDiscount" class="col-12 col-lg-6 col-xl-5" method="POST" action="send-contact.php">
+                <form id="amoforms_formDiscount" class="col-12 col-lg-6 col-xl-5" action="https://forms.amocrm.ru/queue/add" method="POST">
                     <input type="text" name="fields[name_1]" placeholder="Ваше имя" required>      
                           
                     <input type="tel" class="telInput" name="fields[232435_1][317401]" placeholder="+7 (___) ___-__-__" required> 
